--- a/Carrinho.html
+++ b/Carrinho.html
@@ -360,7 +360,9 @@
             <span>R$ 0</span>
           </footer>
         </div>
-        <button>Finalizar Compra</button>
+        <div class="produto">
+       <button class="botao-comprar"><a href="comprar/pagamentos/pagamentos.html">Finalizar Comprar</a></button>
+      </div>
       </aside>
     </div>
   </main>
