--- a/comprar/pagamentos/pagamentos.html
+++ b/comprar/pagamentos/pagamentos.html
@@ -10,7 +10,6 @@
 
 </head>
 <body>
-
 <div class="container15">
 
     <form action="">
@@ -90,7 +89,7 @@
         <input type="submit" value="proceed to checkout" class="submit-btn12">
 
     </form>
-
+    <script src="../../assets/js/pagamento.js"></script>
 </div>    
     
 </body>
