--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
  <div class="wrapper">
     <nav class="nav">
         <div class="nav-logo">
-            <p>ACE STORE</p>
+            <h1>ACE STORE </h1>
         </div>
         <div class="nav-menu" id="navMenu">
             <ul>
