--- a/sobre.html
+++ b/sobre.html
@@ -24,16 +24,23 @@
   </header>
   <section class="about">
     <div class="main">
-      <img src="assets/images/fundo1.jpg" alt="">
       <div class="about-text">
+        <div class="movi">
         <h1>Sobre Nós</h1>
+      </div>
+      <div class="movi">
         <h5>Equipe de <span>desenvolvedores</span></h5>
-        <p>Somos apaixonados por vôlei e dedicados a levar essa paixão para dentro e fora das quadras. Na nossa loja,
-          você encontra camisetas de alta qualidade, desenhadas para oferecer conforto e estilo aos fãs e jogadores.
-          Cada peça é criada com atenção aos detalhes, inspirada pela energia e espírito do esporte. Junte-se a nós e
-          vista o seu amor pelo vôlei!
+      </div>
+        <p> somos apaixonados por vôlei e levamos essa paixão para cada detalhe de nossas camisetas e produtos. Nossa
+          loja oferece uma ampla variedade de camisetas de alta qualidade, criadas especialmente para quem vive e
+          respira o esporte! Com designs exclusivos que unem estilo, conforto e performance, você encontra desde
+          uniformes personalizados para equipes até camisetas casuais para torcedores. Nossas peças são feitas com
+          tecidos tecnológicos que garantem leveza, durabilidade e respirabilidade para acompanhar qualquer desafio em
+          quadra. Explore a VoleiShop e vista-se como um verdadeiro campeão do vôlei!
         </p>
+        <div class="movi">
         <button type="button" class="buttona"><a href="https://sandwiche.me/acestore.sc">Contato</a></button>
+        </div>
       </div>
     </div>
   </section>
