--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <nav>
             <div class="menu">
-                <li><a href="Login.html">Login</a> </li>
+                <li><a href="login.html">Login</a> </li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="joinville.html">Joinville</a></li>
                 <li><a href="Carrinho.html">Carrinho</a></li>
