--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="menu">
-      <li><a href="Login.html">Login</a> </li>
+      <li><a href="login.html">Login</a> </li>
       <li><a href="index.html">voltar</a></li>
     </div>
   </header>
